pkl-core/src/test/files/LanguageSnippetTests/input/errors/listingTypeCheckError3.pkl
res: Listing<String(!isEmpty)> = new Listing<String> {
  ""
}
